changed txt boxes and bg, wrking on animation

--- a/turtle/public/index.html
+++ b/turtle/public/index.html
@@ -27,6 +27,12 @@
     <title>PROJECT TURTLE</title>
   </head>
   <body>
+    <section>
+      <div class="wave wave1"></div>
+      <div class="wave wave2"></div>
+      <div class="wave wave3"></div>
+      <div class="wave wave4"></div>
+    </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
