--- a/turtle/public/index.html
+++ b/turtle/public/index.html
@@ -34,7 +34,10 @@
       <div class="wave wave4"></div>
     </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
