Waves and sand css

--- a/turtle/public/index.html
+++ b/turtle/public/index.html
@@ -28,10 +28,13 @@
   </head>
   <body>
     <section>
-      <div class="wave wave1"></div>
-      <div class="wave wave2"></div>
-      <div class="wave wave3"></div>
-      <div class="wave wave4"></div>
+      <div class="ocean">
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      </div>
+  
     </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
