--- a/turtle/public/index.html
+++ b/turtle/public/index.html
@@ -29,6 +29,7 @@
       <div class="wave"></div>
       <div class="wave"></div>
       <div class="wave"></div>
+      <div class="turtle"></div>
       </div>
 
       
