--- a/turtle/public/index.html
+++ b/turtle/public/index.html
@@ -38,6 +38,7 @@
       <div class="seashell"></div>
       <div class="seashell2"></div>
       
+      <div class="credit">Made By: William Yuan, Jason Panusopone, and Daniel Hong</div>
       
   
     </section>
